--- a/easy_table/package.json
+++ b/easy_table/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "easy_table",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@gwt123/easy_table",
+  "version": "0.1.2",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
