--- a/easy_table/package.json
+++ b/easy_table/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "easy_table",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@gwt123/easy_table",
+  "description": "A Vue.js project",
+  "author": "Atalisas Owen",
+  "version": "0.1.2",
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lib": "vue-cli-service build --mode package --modern --target lib --name easy-table packages/index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -13,12 +17,21 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "style-loader": "^1.1.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
