--- a/easy_table/package.json
+++ b/easy_table/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@gwt123/easy_table",
-  "version": "0.1.2",
+  "description": "A Vue.js project",
+  "author": "Atalisas Owen",
+  "version": "0.1.3",
+  "license": "Apache",
+  "private": false,
+  "main": "dist/easy-table.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lib": "vue-cli-service build --mode package --modern --target lib --name easy-table packages/index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
