--- a/easy_table/package.json
+++ b/easy_table/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "pl-table": "^2.7.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
