--- a/easy_table/package.json
+++ b/easy_table/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.5",
   "license": "Apache",
   "private": false,
-  "main": "dist/easy-table.common.js",
+  "main": "dist/easy-table.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
